--- a/DockerSecrets.Configuration/DockerSecrets.Configuration.csproj
+++ b/DockerSecrets.Configuration/DockerSecrets.Configuration.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId>DockerSecrets.Configuration</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Sadra Rahmani</Authors>
     <Description>A custom configuration provider to load Docker secrets with namespace support.</Description>
-    <PackageProjectUrl>https://github.com/your-repo/DockerSecrets.Configuration</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/your-repo/DockerSecrets.Configuration.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/SadraRahmani/DockerSecrets.Configuration</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/SadraRahmani/DockerSecrets.Configuration.git</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -16,5 +16,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
   </ItemGroup>
-
+  <ItemGroup>
+    <!-- Ensure the README file is packed -->
+    <None Include="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 </Project>
