--- a/DockerSecrets.Configuration/DockerSecrets.Configuration.csproj
+++ b/DockerSecrets.Configuration/DockerSecrets.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId>DockerSecrets.Configuration</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.2.1</Version>
     <Authors>Sadra Rahmani</Authors>
     <Description>A custom configuration provider to load Docker secrets with namespace support.</Description>
     <PackageProjectUrl>https://github.com/SadraRahmani/DockerSecrets.Configuration</PackageProjectUrl>
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
   </ItemGroup>
   <ItemGroup>
     <!-- Ensure the README file is packed -->
