--- a/DockerSecrets.Configuration/DockerSecrets.Configuration.csproj
+++ b/DockerSecrets.Configuration/DockerSecrets.Configuration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId>DockerSecrets.Configuration</PackageId>
-    <Version>1.2.2</Version>
+    <Version>1.2.4</Version>
     <Authors>Sadra Rahmani</Authors>
     <Description>A custom configuration provider to load Docker secrets with namespace support.</Description>
     <PackageProjectUrl>https://github.com/SadraRahmani/DockerSecrets.Configuration</PackageProjectUrl>
@@ -11,6 +11,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
